# stock-logistics-reporting

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  checklog-odoo.cfg
.github/workflows/: test.yml
delivery_line_sale_line_position/: README.rst
delivery_line_sale_line_position/views/: stock_move.xml  stock_picking.xml
printing_auto_stock_picking/: README.rst  __manifest__.py
printing_auto_stock_picking/models/: stock_picking_type.py
printing_auto_stock_picking/tests/: test_printing_auto_stock.py
printing_auto_stock_picking/views/: stock_picking.xml  stock_picking_type.xml
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
stock_account_valuation_report/: README.rst  __manifest__.py
stock_account_valuation_report/i18n/: de.po  es.po  es_MX.po  fr.po  it.po  sl.po  stock_account_valuation_report.pot
stock_account_valuation_report/models/: product_product.py
stock_account_valuation_report/readme/: CONTRIBUTORS.md
stock_account_valuation_report/views/: product_product_views.xml
stock_average_daily_sale/: __manifest__.py
stock_card_report/: README.rst  __manifest__.py
stock_delivery_note/: README.rst
stock_inventory_valuation_report/: README.rst  __manifest__.py
stock_move_delay_report/: README.rst
stock_move_pivot_total_price/: README.rst  __manifest__.py  hooks.py
stock_move_value_report/: README.rst
stock_picking_batch_report/: README.rst
stock_picking_comment_template/: README.rst
stock_picking_group_by_partner_by_carrier_sale_line_position/: README.rst
stock_picking_operations_multilang/: README.rst  __manifest__.py  hooks.py
stock_picking_report_custom_description/: README.rst
stock_picking_report_delivery_custom_name/: README.rst  __manifest__.py
stock_picking_report_delivery_driver/: README.rst  __manifest__.py
stock_picking_report_external_note/: README.rst  __manifest__.py
stock_picking_report_header_repeater/: README.rst  __manifest__.py
stock_picking_report_incoming_delivery_address/: README.rst  __manifest__.py
stock_picking_report_internal_delivery_address/: README.rst
stock_picking_report_product_sticker/: README.rst  __manifest__.py
stock_picking_report_qty_undelivered/: README.rst  __manifest__.py
stock_picking_report_salesperson/: README.rst
stock_picking_report_summary/: README.rst  __manifest__.py
stock_picking_report_valued/: README.rst  __manifest__.py
stock_portal_lot_list_download/: README.rst
stock_quant_history/: README.rst  __manifest__.py
stock_quant_history_queued/: README.rst
stock_quantity_history_location/: README.rst  __manifest__.py
(+101 files in other folders)
