[project]
name = "odoo-addons-oca-stock-logistics-reporting"
version = "18.0.20250528.0"
dependencies = [
    "odoo-addon-delivery_line_sale_line_position==18.0.*",
    "odoo-addon-stock_account_valuation_report==18.0.*",
    "odoo-addon-stock_picking_report_valued==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
